Updated Parser, make the Configuration Editor actually create a configuration